# trm_agent

./: .gitignore  CLAUDE.md  app.py  pyproject.toml
configs/: default.yaml  gliner2_train.yaml  gliner2_train_production.yaml  sudoku.yaml
data/: tools.json
docs/: 01_convert_dataset.md  02_data_loading.md  03_model_architecture.md  04_losses.md  05_training.md  06_gliner2_integration.md
docs/plans/: content_generation_plan.md  deepseek_v3_moe.md  span_extraction_plan.md  unused_params_review.md
scripts/: train.sh  train_ddp.sh
tools/: convert_raw_to_dataset.py  convert_to_gliner2.py  merge_trm_data.py  preprocess_sudoku.py  test.py  train.py  train_gliner2.py  train_sudoku.py  validate_gliner2_data.py
trm_agent/: __init__.py
trm_agent/data/: __init__.py  collator.py  dataset.py  sudoku_dataset.py  tokenizer.py
trm_agent/inference/: __init__.py  gliner2_extractor.py  span_decoder.py
trm_agent/models/: __init__.py  config.py  ema.py  embeddings.py  heads.py  layers.py  sudoku.py  trm.py
trm_agent/training/: __init__.py  config.py  logging.py  losses.py  metrics.py  scheduler.py  trainer.py
trm_agent/utils/: __init__.py  data_processor.py  ddp.py  logger.py  span_utils.py
